zeta-code/tui/src/config/snapshots/zeta_tui__config__provider__tests__narrow_provider_scrolls_to_last_test_action.snap
---
source: zeta-code/tui/src/config/provider_tests.rs
expression: text(&buffer)
---
  API key
  ╭──────────────────────────────╮
  │ API key (optional)           │
  ╰──────────────────────────────╯
  Model ID
  ╭──────────────────────────────╮
  │ private-model-alias          │
  ╰──────────────────────────────╯
  API type        OpenAI Responses
  Model context window        272k
● Test
